Di na ma resize ang text field sa contact us page fixed ang overflowing sa feedbacks

--- a/AdminStyles/feedbackPage.css
+++ b/AdminStyles/feedbackPage.css
@@ -106,6 +106,8 @@
     margin-bottom: 10px;
     border-radius: 8px;
     text-align: justify;
+    word-wrap: break-word; 
+    overflow-wrap: break-word; 
 }
 
 .message p{
